<resources>
    <string name="app_name">YourPlan</string>
    <string name="login_userID">用户名</string>
    <string name="login_userPassword">密码</string>
    <string name="login_btn">登陆</string>
    <string name="login_forgotPassword">忘记密码？</string>
    <string name="login_register">注册</string>
    <string name="register_confirm">确认注册</string>
    <string name="register_passwordConfirm">密码确认</string>
    <string name="password">密码</string>
    <string name="account">用户名</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="delete_plan">Delete</string>
    <string name="Search">搜索</string>
    <string name="groupId_name">群名/群Id</string>
    <string name="disagree">拒绝</string>
    <string name="agree">同意</string>
    <string name="apply">申请加入</string>
    <string name="groupName">群名</string>
    <string name="member">成员人数</string>
    <string name="commentCount">当前点赞数</string>
    <string name="NI_NU">不重要不紧急</string>
    <string name="I_NU">重要-不紧急</string>
    <string name="NI_U">不重要-紧急</string>
    <string name="I_U">重要-紧急</string>
</resources>
