<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">
        <TableRow>
            <TextView android:text="@string/account"/>
            <EditText android:id="@+id/register_account"
                      android:maxLines="1"
                      android:maxLength="15"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/password"/>
            <EditText android:id="@+id/register_passwordEditext"
                      android:maxLines="1"
                      android:inputType="textPassword"
                      android:maxLength="15"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/register_passwordConfirm"/>
            <EditText android:id="@+id/register_passwordConfirmEditText"
                      android:maxLines="1"
                      android:inputType="textPassword"
                      android:maxLength="15"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/register_confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_confirm"/>

</LinearLayout>